--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -5,10 +5,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["src/PDIProject.csproj", "."]
+COPY ["PDIProject/PDIProject.csproj", "."]
 RUN dotnet restore "./PDIProject.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/PDIProject/."
 RUN dotnet build "PDIProject.csproj" -c Release -o /app/build
 
 FROM build AS publish
