teste deploy dockerfile

--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -9,7 +9,7 @@ COPY ["PDIProject/PDIProject.csproj", "."]
 RUN dotnet restore "./PDIProject.csproj"
 COPY . .
 WORKDIR "/PDIProject/."
-RUN dotnet build "PDIProject.csproj" -c Release -o /app/build
+RUN dotnet build "PDIProject/PDIProject.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "PDIProject.csproj" -c Release -o /app/publish /p:UseAppHost=false
