--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -10,8 +10,9 @@ RUN dotnet restore "PDIProject/PDIProject.csproj"
 COPY . .
 
 # Stage 2: Run Entity Framework Migrations
-FROM build AS migration
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS migration
 WORKDIR /src/PDIProject
+RUN dotnet tool install --global dotnet-ef
 RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
 
 # Apply database migrations
@@ -19,6 +20,7 @@ RUN dotnet ef database update
 
 # Stage 3: Publish the application
 FROM migration AS publish
+WORKDIR /src/PDIProject
 RUN dotnet publish "PDIProject.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # Stage 4: Final image
