--- a/PDIProject/PDIProject.csproj
+++ b/PDIProject/PDIProject.csproj
@@ -17,7 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.9" />
+    <!--<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.9" />-->
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <!--<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />-->
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
