dockerfile with basics

--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -13,15 +13,15 @@ FROM build AS migration
 WORKDIR /src/PDIProject
 
 # Install the EF Core CLI tool
-RUN dotnet tool install --global dotnet-ef --version 7.0.9
-
-# Add the EF Core CLI tool to the PATH
-ENV PATH="${PATH}:/root/.dotnet/tools"
-
-# Perform migrations and database update
-RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
-RUN dotnet ef database update
-
+#RUN dotnet tool install --global dotnet-ef --version 7.0.9
+#
+## Add the EF Core CLI tool to the PATH
+#ENV PATH="${PATH}:/root/.dotnet/tools"
+#
+## Perform migrations and database update
+#RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
+#RUN dotnet ef database update
+#
 # Stage 3: Publish the application
 FROM migration AS publish
 WORKDIR /src/PDIProject
