--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -8,27 +8,17 @@ RUN dotnet restore "PDIProject/PDIProject.csproj"
 # Copy the rest of the application code
 COPY . .
 
-# Stage 2: Run Entity Framework Migrations
-FROM build AS migration
+# Perform migrations and database update
 WORKDIR /src/PDIProject
+RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
+RUN dotnet ef database update
 
-# Install the EF Core CLI tool
-#RUN dotnet tool install --global dotnet-ef --version 7.0.9
-#
-## Add the EF Core CLI tool to the PATH
-#ENV PATH="${PATH}:/root/.dotnet/tools"
-#
-## Perform migrations and database update
-#RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
-#RUN dotnet ef database update
-#
-# Stage 3: Publish the application
-FROM migration AS publish
+# Publish the application
 WORKDIR /src/PDIProject
 RUN dotnet publish "PDIProject.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# Stage 4: Final image
+# Stage 2: Final image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "PDIProject.dll"]
