--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -6,19 +6,31 @@ WORKDIR /src
 COPY ["PDIProject/PDIProject.csproj", "PDIProject/"]
 RUN dotnet restore "PDIProject/PDIProject.csproj"
 # Copy the rest of the application code
+COPY .env .env
 COPY . .
 
-# Perform migrations and database update
+# Stage 2: Run Entity Framework Migrations
+FROM build AS migration
 WORKDIR /src/PDIProject
-RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
-RUN dotnet ef database update
 
-# Publish the application
+# Install the EF Core CLI tool
+#RUN dotnet tool install --global dotnet-ef --version 7.0.9
+#
+## Add the EF Core CLI tool to the PATH
+#ENV PATH="${PATH}:/root/.dotnet/tools"
+#
+## Perform migrations and database update
+#RUN dotnet ef migrations add DeployMigration -o Persistence/Migrations
+#RUN dotnet ef database update
+#
+# Stage 3: Publish the application
+FROM migration AS publish
 WORKDIR /src/PDIProject
 RUN dotnet publish "PDIProject.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# Stage 2: Final image
+# Stage 4: Final image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS final
 WORKDIR /app
-COPY --from=build /app/publish .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "PDIProject.dll"]
+
