--- a/PDIProject/Dockerfile
+++ b/PDIProject/Dockerfile
@@ -1,6 +1,7 @@
+export DOCKER_BUILDKIT=1
 # syntax = docker/dockerfile:1.2
-DOCKER_BUILDKIT=1 docker build --secret id=_env,src=etc/secrets/.env ...
-RUN --mount=type=secret,id=_env,dst=/etc/secrets/.env
+RUN --mount=type=secret,id=_env,dst=/etc/secrets/.env cat /etc/secrets/.env
+
 # Stage 1: Build the application
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
