--- a/PDIProject/appsettings.json
+++ b/PDIProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PDIcs": "Server=localhost\\SQLEXPRESS; Database=pdiproject; Integrated Security=True; Trusted_Connection=True; trustServerCertificate=true;"
+    //"PDIcs": "Server=localhost\\SQLEXPRESS; Database=pdiproject; Integrated Security=True; Trusted_Connection=True; trustServerCertificate=true;"
   }
 }
